--- a/avUi/change-lang-directive/change-lang-directive.html
+++ b/avUi/change-lang-directive/change-lang-directive.html
@@ -4,7 +4,7 @@
 </a>
 <ul class="dropdown-menu" role="menu">
   <li><a ng-click="changeLang('en')">en</a></li>
-  <li><a  ng-click="changeLang('es')">es</a></li>
-    <li><a  ng-click="changeLang('ca')">ca</a></li>
-
+  <li><a ng-click="changeLang('es')">es</a></li>
+  <li><a ng-click="changeLang('ca')">ca</a></li>
+  <li><a ng-click="changeLang('gl')">gl</a></li>
 </ul>
