Added refresh button to the census list

--- a/avAdmin/admin-directives/elcensus/elcensus.html
+++ b/avAdmin/admin-directives/elcensus/elcensus.html
@@ -27,6 +27,7 @@
         aria-hidden="true">
       </span>
       <span ng-i18next>avAdmin.census.manage</span>
+      <button class="btn btn-default" ng-click="reloadCensus()"><i class="fa fa-refresh"></i></button>
 
       <div class="btn-group pull-right">
         <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
