--- a/avAdmin/admin-directives/dashboard/dashboard.html
+++ b/avAdmin/admin-directives/dashboard/dashboard.html
@@ -153,6 +153,8 @@
             </div>
             <div class="col-md-5">
                 <dl class="dl-horizontal">
+                  <dt>{{ (q.totals.valid_votes + q.totals.null_votes + q.totals.blank_votes) }}</dt>
+                  <dd ng-i18next>avAdmin.dashboard.votes</dd>
                   <dt>{{ q.totals.blank_votes }}</dt>
                   <dd ng-i18next>avAdmin.dashboard.blankvotes</dd>
                   <dt>{{ q.totals.null_votes }}</dt>
@@ -175,7 +177,7 @@
                 <td>{{ $index + 1 }}</td>
                 <td>{{ an.text }}</td>
                 <td>{{ an.total_count|number }}</td>
-                <td>{{ percentVotes(an.total_count, q) }}</td>
+                <td>{{ percentVotes(an.total_count, q, "over-valid-votes") }}</td>
                 <td ng-if="an.winner_position === 0 || an.winner_positon">{{ an.winner_positon + 1}}</td>
                 <td ng-if="!(an.winner_position === 0 || an.winner_positon)">--</td>
             </tr>
