--- a/avAdmin/admin-directives/dashboard/dashboard.html
+++ b/avAdmin/admin-directives/dashboard/dashboard.html
@@ -158,11 +158,20 @@
                   <dt></dt>
                   <dd>--</dd>
                   <dt>{{ q.totals.valid_votes|number }}</dt>
-                  <dd ng-i18next>avAdmin.dashboard.optionvotes</dd>
+                  <dd>
+                      <span ng-i18next>avAdmin.dashboard.optionvotes</span>
+                      <span>({{ percentVotes(q.totals.valid_votes, q) }})</span>
+                  </dd>
                   <dt>{{ q.totals.blank_votes }}</dt>
-                  <dd ng-i18next>avAdmin.dashboard.blankvotes</dd>
+                  <dd>
+                      <span ng-i18next>avAdmin.dashboard.blankvotes</span>
+                      <span>({{ percentVotes(q.totals.blank_votes, q) }})</span>
+                  </dd>
                   <dt>{{ q.totals.null_votes }}</dt>
-                  <dd ng-i18next>avAdmin.dashboard.nullvotes</dd>
+                  <dd>
+                      <span ng-i18next>avAdmin.dashboard.nullvotes</span>
+                      <span>({{ percentVotes(q.totals.null_votes, q) }})</span>
+                  </dd>
                 </dl>
             </div>
         </div>
