--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <script src="bower_components/angular-bootstrap/dropdown.js" class="lib"></script>
   <script src="bower_components/angular-ui-utils/ui-utils.js" class="lib"></script>
   <script src="bower_components/angular-cookies/angular-cookies.js" class="lib"></script>
+  <script src="bower_components/angular-cookie/angular-cookie.js" class="lib"></script>
   <script src="bower_components/angular-load/angular-load.js" class="lib"></script>
   <script src="bower_components/i18next/i18next.js" class="lib"></script>
   <script src="bower_components/ng-i18next/dist/ng-i18next.js" class="lib"></script>
