--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
   <head>
     <title>Agora Voting</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <base href="/">
     <meta charset="utf-8" />
-    <link href="themes/default/app.less" type="text/css" rel="stylesheet/less" id="themes" />
+    <link href="/themes/default/app.less" type="text/css" rel="stylesheet/less" id="themes" />
   </head>
 <body>
   <!-- Livereload script for development only (stripped during dist build) -->
   <script src="http://localhost:35729/livereload.js"></script>
 
   <!-- IE8 bind workaround (needed for less) -->
-  <script src="ie8-bind-workaround.js"></script>
+  <script src="/ie8-bind-workaround.js"></script>
   
   <!-- JS from Bower Components -->
   <script src="bower_components/less.js/dist/less-1.6.2.js"></script>
@@ -34,9 +35,9 @@
   <script src="bower_components/i18next/i18next.js" class="lib"></script>
   <script src="bower_components/ng-i18next/dist/ng-i18next.js" class="lib"></script>
   <script src="bower_components/angular-drag-and-drop-lists/angular-drag-and-drop-lists.js" class="lib"></script>
-  <script type='text/javascript' src='bower_components/ngInfiniteScroll/build/ng-infinite-scroll.min.js' class="lib"></script>
-  <script type='text/javascript' src='bower_components/papaparse/papaparse.min.js' class="lib"></script>
-  <script type="text/javascript" src="bower_components/file-saver/FileSaver.min.js" class="lib"></script>
+  <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.min.js" class="lib"></script>
+  <script src="bower_components/papaparse/papaparse.min.js" class="lib"></script>
+  <script src="bower_components/file-saver/FileSaver.min.js" class="lib"></script>
   <script src="bower_components/ng-file-upload/angular-file-upload.js" class="lib"></script>
   <script src="bower_components/ng-autofocus/dist/ng-autofocus.js" class="lib"></script>
   <script src="bower_components/css-element-queries/src/ResizeSensor.js" class="lib"></script>
@@ -60,10 +61,10 @@
   <!-- Add New Vendor Component JS Above -->
 
   <!-- Configuration file JS -->
-  <script src="avConfig.js"></script>
+  <script src="/avConfig.js"></script>
 
   <!-- Themes JS -->
-  <script src="avThemes.js"></script>
+  <script src="/avThemes.js"></script>
 
   <!-- Main App JS -->
   <script src="avUi/avUi.js" class="app"></script>
@@ -234,10 +235,10 @@
   <script src="test/unit_test_e2e.js" class="app"></script>
 
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-  <script src="ie10-viewport-bug-workaround.js"></script>
+  <script src="/ie10-viewport-bug-workaround.js"></script>
   
   <!-- IE9 console workaround -->
-  <script src="ie9-console-workaround.js"></script>
+  <script src="/ie9-console-workaround.js"></script>
   <!-- Add New Component JS Above -->
 
   <div id="no-js">
