--- a/avBooth/pcandidates-cell-directive/pcandidates-cell-directive.html
+++ b/avBooth/pcandidates-cell-directive/pcandidates-cell-directive.html
@@ -11,6 +11,11 @@
   ng-if="candidates.length == 1"
   ng-class="{selected: candidates.selected > 0}"
   ng-click="toggleCell(team, question_index)">
+  <img
+    class="cand-img"
+    ng-if="getUrl(candidates[0], 'Image URL')"
+    ng-src="{{getUrl(candidates[0], 'Image URL').url}}"
+    alt="{{candidates[0].text}}" />
   <span class="label label-default label-category">{{question_title}}</span>
   <span class="one-line">{{candidates[0].text}}</span>
 </div>
@@ -59,6 +64,13 @@
       <span
         class="glyphicon"
         ng-class="{'glyphicon glyphicon-check': cand.selected > -1, 'glyphicon glyphicon-unchecked': cand.selected === -1}">
+      </span>
+      <span>
+        <img
+          class="item-cand-img"
+          ng-if="getUrl(cand, 'Image URL')"
+          ng-src="{{getUrl(cand, 'Image URL').url}}"
+          alt="{{cand.text}}" />
       </span>
       <span>{{cand.text}}</span>
     </div>
