removing ahoram old layout support and adding support for more flexible accordion layout options

--- a/avBooth/conditional-accordion-screen-directive/conditional-accordion-screen-directive.html
+++ b/avBooth/conditional-accordion-screen-directive/conditional-accordion-screen-directive.html
@@ -87,7 +87,7 @@
           layout="stateData.question.layout"
           max="stateData.question.max"
           min="stateData.question.min"
-          options="stateData.question.answers"
+          question="stateData.question"
           filter="{{stateData.filter}}"
           ng-class="{hidden: stateData.affixIsSet && stateData.affixDropDownShown}">
         </div>
