--- a/avBooth/multi-question-directive/multi-question-directive.html
+++ b/avBooth/multi-question-directive/multi-question-directive.html
@@ -22,8 +22,11 @@
   <div class="navbar-unfixed-top text-center" av-collapsing=".unfixed-top-height" data-toggle-selector="[avb-multi-question] #avb-toggle">
     <div class="container">
       <div class="hidden unfixed-top-height"></div>
-      <h1>{{stateData.question.title}}</h1>
-      <p class="description" ng-bind-html="stateData.question.description | addTargetBlank"></p>
+      <h1 ng-if="!showingPreset">{{stateData.question.title}}</h1>
+      <p
+        ng-if="!showingPreset"
+        class="description"
+        ng-bind-html="stateData.question.description | addTargetBlank"></p>
     </div>
   </div>
 </div>
@@ -32,7 +35,7 @@
   <span class="glyphicon glyphicon-play"></span>
 </div>
 
-<div class="content avb-content">
+<div class="content avb-content" ng-if="!showingPreset">
   <div class="container">
     <div class="row">
       <!-- only shown if in mobile: a row with selected opts and filter -->
@@ -107,6 +110,7 @@
           [i18next]({count: numSelectedOptions()})avBooth.questionSelectedOptionsTitleOrdered
         </h4>
         <div avb-selected-options
+          preset-selected-size="stateData.question.presetSelectedSize"
           layout="stateData.question.layout"
           max="stateData.question.max"
           min="stateData.question.min"
@@ -149,7 +153,7 @@
           ng-if="numSelectedOptions() !== stateData.question.max && numSelectedOptions() >= stateData.question.min && numTaggedSelectedOptions() !== tagMax && (!noTagMax || numSelectedOptions() - numTaggedSelectedOptions() !== noTagMax)">
         </span>
         <span
-          ng-i18next="[i18next]({min:stateData.question.min, max:stateData.question.max})avBooth.numOptionsLimits"
+          ng-i18next="[i18next]({min:stateData.question.min, max: stateData.question.max})avBooth.numOptionsLimits"
           ng-if="numSelectedOptions() !== stateData.question.max && numSelectedOptions() >= stateData.question.min && (!noTagMax || numSelectedOptions() - numTaggedSelectedOptions() !== noTagMax) && numTaggedSelectedOptions() !== tagMax">
         </span>
       </p>
@@ -157,6 +161,49 @@
         class="btn btn-block btn-lg btn-success btn-plain"
         ng-i18next="avBooth.continueButton"
         ng-click="questionNext()">
+      </button>
+    </div>
+  </div>
+</div>
+
+<div class="content avb-content preset"  ng-if="showingPreset">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <span ng-if="showingPreset">
+          <h3 ng-bind-html="stateData.question.extra_options.recommended_preset__title | addTargetBlank"></h3>
+          <p class="description" ng-bind-html="stateData.question.description | addTargetBlank"></p>
+        </span>
+      </div>
+    </div>
+    <div class="row options-row">
+      <!-- show yes/no options -->
+      <div class="col-xs-6">
+        <div class="opt" ng-click="selectPresets()">
+          <span class="glyphicon"
+            ng-class="{'glyphicon-unchecked': stateData.question.presetSelected !== true,
+                       'glyphicon-check': stateData.question.presetSelected === true}">
+          </span>
+          <span ng-i18next="yes"></span>
+        </div>
+      </div>
+      <div class="col-xs-6 left-border">
+        <div class="opt" ng-click="unselectPresets()">
+          <span class="glyphicon"
+            ng-class="{'glyphicon-unchecked': stateData.question.presetSelected !== false,
+                       'glyphicon-check': stateData.question.presetSelected === false}">
+          </span>
+          <span ng-i18next="no"></span>
+        </div>
+      </div>
+    </div>
+
+    <!-- next button -->
+    <div class="row hidden" ng-cloak av-affix-bottom data-force-affix-width="768">
+      <button
+        class="btn btn-block btn-lg btn-success btn-plain"
+        ng-i18next="avBooth.continueButton"
+        ng-click="presetNext()">
       </button>
     </div>
   </div>
