--- a/avBooth/selected-options-directive/selected-options-directive.html
+++ b/avBooth/selected-options-directive/selected-options-directive.html
@@ -1,37 +1,19 @@
 <div
   class="col-xs-12"
-  ng-if="layout === 'ahoram-primaries'"
-  dnd-list="options"
-  dnd-drop="moveOption2(item, index)">
-  <div avb-ahoram-primaries-selected-option
-    ng-repeat="option in options | avbSelectedOptions"
-    class="animate-repeat"
-    dnd-draggable="option"
-    dnd-effect-allowed="move"
-    dnd-disable-if="option.id === 0"
-    ng-class="{selected: option.selected > -1}"
-    ng-click="toggleSelectItem2(option)">
-  </div>
-  <div
-    class="padded"
-    ng-if="(options | avbSelectedOptions).length == 0"
-    ng-i18next="avBooth.noOptionsSelected">
-  </div>
-</div>
-<div
-  class="col-xs-12"
   ng-if="layout === 'accordion' || layout === 'conditional-accordion' || layout === 'simple' || layout === 'details'"
   dnd-list="options"
   dnd-drop="moveOption(item, index)">
   <div avb-accordion-option
     dnd-draggable="option"
     dnd-effect-allowed="move"
-    dnd-disable-if="!ordered || (options | avbSelectedOptions).length < 2"
+    dnd-disable-if="!ordered || (options | avbSelectedOptions).length < 2 || (presetSelectedSize > 0 && option.selected - presetSelectedSize < 0)"
     ng-repeat="option in options | avbSelectedOptions"
     show-category="true"
     show-selected-pos="true"
     class="animate-repeat"
-    ng-class="{selected: option.selected > -1}">
+    ng-class="{
+      selected: option.selected > -1,
+      preset: presetSelectedSize > 0 && option.selected - presetSelectedSize < 0}">
   </div>
   <div
     class="padded"
