making election login success action configurable in the admin gui

--- a/avAdmin/admin-directives/elcensus/elcensus.html
+++ b/avAdmin/admin-directives/elcensus/elcensus.html
@@ -168,7 +168,7 @@
     </table>
 
     <button
-      ui-sref="admin.create()"
+      ui-sref="admin.successAction()"
       ng-if="!election.id"
       class="btn btn-block btn-success"
       ng-i18next>
