Added image field type

--- a/avRegistration/field-directive/field-directive.html
+++ b/avRegistration/field-directive/field-directive.html
@@ -9,4 +9,5 @@
   <div avr-bool-field ng-switch-when="bool"></div>
   <div avr-captcha-field ng-switch-when="captcha"></div>
   <div avr-textarea-field ng-switch-when="textarea"></div>
+  <div avr-image-field ng-switch-when="image"></div>
 </div>
