--- a/avAdmin/admin-directives/census-field/census-field.html
+++ b/avAdmin/admin-directives/census-field/census-field.html
@@ -14,6 +14,9 @@
       <span class="glyphicon glyphicon-play"></span>
     </div>
   </div>
+  <div ng-switch-when="image" class="dict collapsed">
+    <a href ng-click="viewImage()" ng-i18next>avAdmin.census.image</a>
+  </div>
   <div ng-switch-default>
     {{ c.metadata[field.name] }}
   </div>
