--- a/avAdmin/admin-directives/elcensus/elcensus.html
+++ b/avAdmin/admin-directives/elcensus/elcensus.html
@@ -176,3 +176,22 @@
     </button>
 
 </div>
+
+<!-- image field modal -->
+<div class="modal fade" id="imageModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" ng-i18next>avAdmin.census.imageModalTitle</h4>
+      </div>
+      <div class="modal-body">
+        <div id="imageModalFields"></div>
+        <img ng-src="{{ imageVal }}" width="100%" />
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal" ng-i18next>avAdmin.census.imageModalClose</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
