Starting colored-accordion layout

--- a/avBooth/selected-options-directive/selected-options-directive.html
+++ b/avBooth/selected-options-directive/selected-options-directive.html
@@ -1,6 +1,6 @@
 <div
   class="col-xs-12"
-  ng-if="layout === 'accordion' || layout === 'conditional-accordion' || layout === 'simple' || layout === 'details'"
+  ng-if="layout === 'accordion' || layout === 'conditional-accordion' || layout === 'colored-accordion' || layout === 'simple' || layout === 'details'"
   dnd-list="options"
   dnd-drop="moveOption(item, index)">
   <div avb-accordion-option
