--- a/avBooth/available-options-directive/available-options-directive.html
+++ b/avBooth/available-options-directive/available-options-directive.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12" ng-if="layout === 'accordion' || layout === 'simple' || layout === 'details' || layout === 'conditional-accordion' || layout === 'ahoram-primaries'">
+<div class="col-xs-12" ng-if="layout === 'accordion' || layout === 'simple' || layout === 'details' || layout === 'conditional-accordion' || layout === 'ahoram-primaries' || layout === 'colored-accordion'">
   <div avb-accordion-options>
   </div>
 </div>
