--- a/avBooth/booth-directive/booth-directive.html
+++ b/avBooth/booth-directive/booth-directive.html
@@ -18,6 +18,8 @@
   </div>
   <div avb-conditional-accordion-screen ng-if="state == stateEnum.conditionalAccordionScreen">
   </div>
+  <div avb-colored-accordion-screen ng-if="state == stateEnum.coloredAccordionScreen">
+  </div>
   <div avb-2questions-conditional-screen ng-if="state == stateEnum['2questionsConditionalScreen']">
   </div>
   <div avb-cast-or-cancel-screen ng-if="state == stateEnum.castOrCancelScreen">
