--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
   <script src="avBooth/ahoram-primaries-selected-option-directive/ahoram-primaries-selected-option-directive.js" class="app"></script>
   <script src="avBooth/2questions-conditional-screen-directive/2questions-conditional-screen-directive.js" class="app"></script>
   <script src="avBooth/conditional-accordion-screen-directive/conditional-accordion-screen-directive.js" class="app"></script>
+  <script src="avBooth/colored-accordion-screen-directive/colored-accordion-screen-directive.js" class="app"></script>
   <script src="avBooth/accordion-option-directive/accordion-option-directive.js" class="app"></script>
   <script src="avBooth/accordion-options-directive/accordion-options-directive.js" class="app"></script>
   <script src="avBooth/available-options-directive/available-options-directive.js" class="app"></script>
