adding initial youtube getter version

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
   <script src="avUi/percent-votes-service.js" class="app"></script>
   <script src="avUi/checker-service.js" class="app"></script>
   <script src="avUi/add-dots-to-int-service.js" class="app"></script>
+  <script src="avUi/youtube-embed-url-service.js" class="app"></script>
   <script src="avUi/endswith-service.js" class="app"></script>
   <script src="avUi/state-data-service.js" class="app"></script>
   <script src="avUi/autoscroll-down-directive.js" class="app"></script>
