--- a/avBooth/pairwise-beta-directive/pairwise-beta-directive.html
+++ b/avBooth/pairwise-beta-directive/pairwise-beta-directive.html
@@ -50,17 +50,16 @@
         <div class="clickable" ng-click="selectAnswer(1)">
           <div class="img-wrapper">
             <iframe
-              ng-if="isYoutube(one)"
+              ng-if="getYoutubeEmbed(one)"
               width="560"
               height="315"
-              ng-src="{{getUrls(one)['Image URL']}}"
+              ng-src="{{getYoutubeEmbed(one)}}"
               frameborder="0"
               allowfullscreen>
             </iframe>
             <img
-              ng-if="!isYoutube(one)"
+              ng-if="!getYoutubeEmbed(one) && !!getUrls(one)['Image URL']"
               alt="{{one.text}}"
-              ng-if="!!getUrls(one)['Image URL']"
               ng-src="{{getUrls(one)['Image URL']}}" />
           </div>
           <h2 ng-bind-html="one.text"></h2>
@@ -89,17 +88,16 @@
         <div class="clickable" ng-click="selectAnswer(2)">
           <div class="img-wrapper">
             <iframe
-              ng-if="isYoutube(two)"
+              ng-if="getYoutubeEmbed(two)"
               width="560"
               height="315"
-              ng-src="{{getUrls(two)['Image URL']}}"
+              ng-src="{{getYoutubeEmbed(two)}}"
               frameborder="0"
               allowfullscreen>
             </iframe>
             <img
-              ng-if="!isYoutube(two)"
+              ng-if="!getYoutubeEmbed(two) && !!getUrls(two)['Image URL']"
               alt="{{two.text}}"
-              ng-if="!!getUrls(two)['Image URL']"
               ng-src="{{getUrls(two)['Image URL']}}" />
           </div>
           <h2 ng-bind-html="two.text"></h2>
