--- a/avBooth/multi-question-directive/multi-question-directive.html
+++ b/avBooth/multi-question-directive/multi-question-directive.html
@@ -22,7 +22,7 @@
   <div class="navbar-unfixed-top text-center" av-collapsing=".unfixed-top-height" data-toggle-selector="[avb-multi-question] #avb-toggle">
     <div class="container">
       <div class="hidden unfixed-top-height"></div>
-      <h1 ng-if="!showingPreset">{{stateData.question.title}}</h1>
+      <h1 ng-if="!showingPreset" ng-bind-html="stateData.question.title | addTargetBlank"></h1>
       <p
         ng-if="!showingPreset"
         class="description"
