--- a/avBooth/pairwise-beta-directive/pairwise-beta-directive.html
+++ b/avBooth/pairwise-beta-directive/pairwise-beta-directive.html
@@ -22,7 +22,7 @@
   <div class="navbar-unfixed-top text-center" av-collapsing=".unfixed-top-height" data-toggle-selector="[avb-multi-question] #avb-toggle">
     <div class="container">
       <div class="hidden unfixed-top-height"></div>
-      <h1>{{stateData.question.title}}</h1>
+      <h3 ng-bind-html="stateData.question.title | addTargetBlank"></h3>
     </div>
   </div>
 </div>
